--- a/src/App.css
+++ b/src/App.css
@@ -159,9 +159,7 @@ body {
 
 .remove-btn {
  padding: 0 5px;
-}
-* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {}
+};
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
